--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ server/node_modules/
 client/.env
 client/.env.local
 client/.env.*.local
-server/.env
+server/src/.env
 server/.env.local
 server/.env.*.local
 
